fixed overlap issue of drop down

--- a/src/app/add-certificate/add-certificate.component.css
+++ b/src/app/add-certificate/add-certificate.component.css
@@ -5,6 +5,7 @@
 	height: 610px;
 	background: #fff;
 	float: certer;
+	z-index: 10;
 }
 
 form
